docs(books): Java入門書全章に grounding（公式ドキュメント脚注）を追加
第1〜73章の全6部にわたり、Markdown 脚注（GFM）で公式ドキュメントへの参照を整備した。事実主張ベースで、Oracle 公式・OpenJDK JEP・RFC/ISO/IEEE・書誌などの一次資料を優先して引用している。

- 77 ファイルに合計 140 件の脚注を追加（参照と定義の整合を確認）
- 第1章: Java 史（1991/Green Project、1995 リリース、Sun→Oracle 買収、JDK 25 公開 2025-09-16）、アルゴリズム・bug 語源
- 第3章: JLS §7.6（クラス名＝ファイル名）、§12.1.4（main 規約）、JEP 512（コンパクトソースファイル）
- 第4〜10章: 基本型値域 JLS §4.2、widening/narrowing 変換、`var` JEP 286、IEEE 754
- 第11〜20章: Records JEP 395、instanceof パターン JEP 394、default method JEP 126、try-with-resources
- 第21〜30章: Stream API、Optional、java.time/JSR 310、switch 式 JEP 361、Sealed JEP 409、Virtual Threads JEP 444、Text Blocks JEP 378
- 第31〜40章: Maven/Gradle 公式、JUnit 5、Mockito、GoF 書誌、SOLID（Uncle Bob）、Spring、Hibernate、REST（Fielding 論文）、RFC 9110、SLF4J/Logback
- 第41〜50章: JVMS 25、G1（JEP 248）、ZGC（JEP 377/439）、JPMS（JEP 261）、JFR（JEP 328）、GraalVM Native、JMM/JSR 133、MethodHandle/JSR 292、JMH
- 第51〜73章: GoF 書籍、Effective Java Item 2/3、java.io/Decorator、java.lang.reflect.Proxy、Iterable/Iterator、java.util.concurrent.Flow

第4〜6部の検証・校正もあわせて実施:
- 第38章 例外ハンドリング: RFC 7807 → RFC 9457 への更新（2023-07 で置き換え）、ProblemDetail の各フィールド説明と `ProblemDetail.forStatusAndDetail()` の具体例を加筆
- 第72章 Visitor: 「ASR」→「AST」typo 修正
- 第73章 Interpreter: 末章の不自然な「次の章群（第5部）」誘導を削除し、書籍全体の完走を祝す結びに置換

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>